tests/should_fail/terminates/recursion_with_substitution.stderr
error: Polymorphic recursion is not supported: recursive calls should have the same type parameters.
  --> recursion_with_substitution.rs:34:5
   |
34 |     foo(0)
   |     ^^^^^^

error: aborting due to 1 previous error

